# WinKernelLite

./: .gitignore  CMakeLists.txt  Diagnose-Build-System.ps1  Diagnose-Package.ps1  README.md  README.md.new  check_install.bat  debug_install_paths.bat  diagnose_install.bat  diagnostics.bat  install_guide.bat  prepare_headers_for_examples.bat  rebuild_all.bat  run_version_example.bat  setup_examples_env.bat  test_example_execution.bat  test_example_installation.bat  test_examples_installation.bat  test_include_paths.bat
cmake/: WinKernelLiteConfig.cmake.in
docs/: build_improvements.md  building_examples.md  example_devices_list.md  examples_guide.md  examples_installation.md  include_path_resolution.md  index.md  package_usage.md  system_compatibility.md  versioning.md  working_with_unicode_string.md
examples/: CMakeLists.txt  run_all_examples.bat
examples/DevicesExample/: CMakeLists.txt  DevicesExample.c  README.md  build_and_run.bat
examples/DevicesList/: CMakeLists.txt  DeviceListApp.c  DevicesList.c  DevicesList.h  build_and_run.bat
examples/VersionInfo/: CMakeLists.txt  build_and_run.bat  version_info.c
include/: KernelHeapAlloc.h  LinkedList.h  UnicodeString.h  UnicodeStringUtils.h  Version.h.in
test_package/: CMakeLists.txt  build_and_run.bat  main.c
tests/: test_kernel_heap_alloc.cpp  test_linked_list.cpp  test_unicode_string.cpp  test_unicode_string_utils.cpp
